--- a/package.json
+++ b/package.json
@@ -5,23 +5,19 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "@toast-ui/react-calendar": "^1.0.5",
-    "@toast-ui/react-chart": "^4.4.1",
-    "@toast-ui/react-grid": "^4.20.0",
+    "ag-grid-enterprise": "^27.0.1",
+    "ag-grid-react": "^27.0.1",
     "axios": "^0.21.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "5.0.0",
-    "styled-components": "^5.3.3",
-    "styled-icons": "^10.45.0",
-    "web-vitals": "^1.1.2"
+    "react-scripts": "5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
